--- a/index.html
+++ b/index.html
@@ -1,66 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:700,700i&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="style.css">
-    <title>CV | Miranda Fasya Ramadhan</title>
-</head>
-<body>
-    
-    <header>
-        <div class="wrapper-center">
-            <h1>Miranda Fasya Ramadhan</h1>
-            <img src="asset/fsy.jpg" alt="Miranda Fasya Ramadhan">
-            <ul>
-                <li><a href="#about-me">ABOUT ME</a> </li>
-                <li><a href="#RO">riwayat organisasi</a> </li>
-                <li><a href="#KONTAK">kontak</a> </li>
-            </ul>
+    <head>
+        <meta charset="UTF-8">
+        <title>TODO List</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <h1><span class="styling">TODO</span>List</h1>
+        <div class="input_div">
+            <input class= "input" type="text" placeholder="What Do You Want To Do ...">
+            <button class="addButton">+</button>
         </div>
-    </header>
-    <section class="about-me" id="about-me">
-    <div class="wrapper">
-        <h2>About Me</h2>
-            <p>Tgl lahir : 25 desember 2000</p>
-            <p>Alamat : manggeng,Aceh Barat Daya</p>
-            <p>Gender : Perempuan</p>
-            <p>Jurusan : Informatika</p>
-            <p>Universitas : UNSYIAH</p>
-    </div>
-    </section>
-    <section class="RO" id="RO">
-        <div class="wrapper">
-            <h2>RIWAYAT ORGANISASI</h2>
-            <div class="wrapper-RIWAYAT ORGANISASI">
-            <h3><p>- Anggota Pendanaan Infest 2019</p>
-                <p>- Kewirausahaan HMIF 2020</p>
-                <p>- Ketua HUMAS Infest 2020</p>
-                <p>- Kesejahteraan Mahasiswa BEM FMIPA 2020</p>
-            </h3>
-                <div class="background">
-                    <div class="indicator"></div>
-                </div>
+        <div class="container">
+        <!--    
+            <div class="item">
+                <input type="text" class="item_input" disabled>
+                <button class="doneButton">DONE</button>
+                <button class="editButton">EDIT</button>
+                <button class="removeButton">REMOVE</button>
             </div>
-
+        --> 
         </div>
-    </section>
-
-    <section class="KONTAK" id="KONTAK">
-        <div class="wrapper">
-            <h2>KONTAK</h2>
-            <div class="wrapper-kontak">
-            <h3><p>email : mirandafasyar@gmail.com</p>
-                <p>no.hp : 085216901727</p>
-                <p>instagram : @mirandafasyaramadhan</p>
-            </h3>
-            </div>
-
-        </div>
-    </section>
-
-</body>
-<footer>copyright : miranda fasya ramadhan 2020</footer>
+        <script type="text/javascript" src="main.js"></script>
+    </body>
+    <footer>TODOlist : Miranda Fasya Ramadhan 2020</footer>
 </html>
